BIG UPDATE (see description)
-Added a Vector4D class to be able to make 4D vectors. This is to make better the notes array of the song we chosed to not to create several int arrays inside one dynArray but one dynArray with several 4D direction (just commodity)

-Notes fully works, now the only thing to do is to make collisions work

-In Scene, I've created a temporary dynArray with some vectors4D inside to simulate the real array. Notes are loaded from here and starts again and again once it reaches the end of the dynArray. It works perfectly :)

--- a/Almost Hero/Motor2D/Motor2D.vcxproj.filters
+++ b/Almost Hero/Motor2D/Motor2D.vcxproj.filters
@@ -119,6 +119,9 @@
       <Filter>Modules\Physics</Filter>
     </ClInclude>
     <ClInclude Include="Note.h" />
+    <ClInclude Include="Vector4D.h">
+      <Filter>Core\Containers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Core">
