--- a/Almost Hero/Motor2D/Motor2D.vcxproj
+++ b/Almost Hero/Motor2D/Motor2D.vcxproj
@@ -116,6 +116,7 @@
     <ClInclude Include="j1Textures.h" />
     <ClInclude Include="j1Window.h" />
     <ClInclude Include="p2SString.h" />
+    <ClInclude Include="Vector4D.h" />
     <ClInclude Include="PugiXml\src\pugiconfig.hpp" />
     <ClInclude Include="PugiXml\src\pugixml.hpp" />
   </ItemGroup>
