Update on the code (overall, comments) to get close to the fatal crash... I'm getting closer

--- a/Almost Hero/Motor2D/Motor2D.vcxproj.filters
+++ b/Almost Hero/Motor2D/Motor2D.vcxproj.filters
@@ -37,16 +37,12 @@
     <ClCompile Include="j1Textures.cpp">
       <Filter>Modules\Controllers\Specific</Filter>
     </ClCompile>
-    <ClCompile Include="j1EntityManager.cpp">
-      <Filter>Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="j1ButtonEntity.cpp">
-      <Filter>Entities\General</Filter>
-    </ClCompile>
     <ClCompile Include="j1Collisions.cpp">
       <Filter>Modules\Physics</Filter>
     </ClCompile>
-    <ClCompile Include="Note.cpp" />
+    <ClCompile Include="Note.cpp">
+      <Filter>Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="p2Defs.h">
@@ -106,21 +102,14 @@
     <ClInclude Include="Animation.h">
       <Filter>Core</Filter>
     </ClInclude>
-    <ClInclude Include="j1EntityManager.h">
-      <Filter>Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="j1Entity.h">
-      <Filter>Entities\General</Filter>
-    </ClInclude>
-    <ClInclude Include="j1ButtonEntity.h">
-      <Filter>Entities\General</Filter>
-    </ClInclude>
     <ClInclude Include="j1Collisions.h">
       <Filter>Modules\Physics</Filter>
     </ClInclude>
-    <ClInclude Include="Note.h" />
     <ClInclude Include="Vector4D.h">
       <Filter>Core\Containers</Filter>
+    </ClInclude>
+    <ClInclude Include="Note.h">
+      <Filter>Modules</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -151,14 +140,8 @@
     <Filter Include="Modules\Controllers\Specific">
       <UniqueIdentifier>{b9ef5455-0e36-4e92-87ad-fb4bacb86e7d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Entities">
-      <UniqueIdentifier>{529257e2-03d9-42fb-a51d-4b095ef79b38}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Modules\Physics">
       <UniqueIdentifier>{29d2480e-83ca-49f6-87aa-5ff32e098cf3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Entities\General">
-      <UniqueIdentifier>{919f42d8-6905-4780-bc2e-4a2e0375941f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
