--- a/Almost Hero/Motor2D/Motor2D.vcxproj
+++ b/Almost Hero/Motor2D/Motor2D.vcxproj
@@ -83,6 +83,7 @@
     <ClCompile Include="j1App.cpp" />
     <ClCompile Include="j1Audio.cpp" />
     <ClCompile Include="j1Input.cpp" />
+    <ClCompile Include="j1Particles.cpp" />
     <ClCompile Include="j1PerfTimer.cpp" />
     <ClCompile Include="j1Scene.cpp" />
     <ClCompile Include="j1Timer.cpp" />
@@ -100,6 +101,7 @@
     <ClInclude Include="j1Fonts.h" />
     <ClInclude Include="j1Collisions.h" />
     <ClInclude Include="j1Gui.h" />
+    <ClInclude Include="j1Particles.h" />
     <ClInclude Include="j1PerfTimer.h" />
     <ClInclude Include="j1Scene.h" />
     <ClInclude Include="j1Timer.h" />
